--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-	"author": "Patrick Neal <apparently@patrickneal.codes>",
-	"description": "My bootstrap to set up basic projects",
-	"devDependencies": {
-		"angular": "^1.4.8",
-		"angular-mocks": "^1.4.8",
-		"grunt": "^0.4.5",
-		"grunt-contrib-connect": "^0.11.2",
-		"grunt-contrib-jshint": "^0.11.3",
-		"grunt-contrib-sass": "^0.9.2",
-		"grunt-contrib-watch": "^0.6.1",
-		"jasmine": "^2.4.1",
-		"karma": "^0.13.19",
-		"karma-chrome-launcher": "^0.2.2",
-		"karma-jasmine": "^0.3.6",
-		"karma-phantomjs-launcher": "^0.2.3",
-		"phantomjs": "^1.9.19"
-	},
-	"license": "MIT",
-	"name": "patrickneal.codes",
-	"repository": "N/A",
-	"version": "1.0.0"
+  "author": "Patrick Neal <apparently@patrickneal.codes>",
+  "description": "My bootstrap to set up basic projects (with angular)",
+  "devDependencies": {
+    "bower": "^1.7.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "jasmine": "^2.4.1",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "phantomjs": "^1.9.19"
+  },
+  "license": "MIT",
+  "name": "bootstrap-angular",
+  "repository": "N/A",
+  "version": "1.0.0"
 }
