--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "My bootstrap to set up basic projects (with angular)",
   "devDependencies": {
     "bower": "^1.7.2",
+    "font-awesome": "^4.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-jshint": "^0.11.3",
